--- a/src/index.scss
+++ b/src/index.scss
@@ -2,16 +2,14 @@
   font-family: 'RobotoNormal';
   src: url('./assets/fonts/Roboto-Regular-webfont.eot');
   src: url('./assets/fonts/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('./assets/fonts/Roboto-Regular-webfont.woff') format('woff'),
-    url('./assets/fonts/Roboto-Regular-webfont.ttf') format('truetype'),
-    url('./assets/fonts/Roboto-Regular-webfont.svg#RobotoRegular') format('svg');
+       url('./assets/fonts/Roboto-Regular-webfont.woff') format('woff'),
+       url('./assets/fonts/Roboto-Regular-webfont.ttf') format('truetype'),
+       url('./assets/fonts/Roboto-Regular-webfont.svg#RobotoRegular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -21,14 +19,12 @@
 
 .cf:before,
 .cf:after {
-  content: '';
-  display: table;
+    content: '';
+    display: table;
 }
-
 .cf:after {
-  clear: both;
+    clear: both;
 }
-
 .cf {
   *zoom: 1;
 }
